# cube_solver

./: Cargo.toml  README.md  index.html  main.js
src/: lib.rs  main.rs
