[package]
name = "cube_solver"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/johan-05/cube_solver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
 #Tell `rustc` to optimize for small code size.
opt-level = "s"
